Refactor last cases.